Trying to solve the issue of the mobile device getting stuck in the first few seconds by changing the touch-action manipulation.

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@
   border: 2px solid var(--border-color);
   margin: 2px;
   padding: 0;  border-radius: 5vmin;
+  touch-action: manipulation;
 }
 
 .tiny-mario #up { grid-area: up; }
